--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Second Repo</title>
 </head>
 <body>
-    
+    <h1>I can use GitHub now!</h1>
+    <h2>Now need to learn to update the code in GitHub</h2>
 </body>
 </html>
