--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <body>
     <h1>I can use GitHub now!</h1>
     <h2>Now need to learn to update the code in GitHub</h2>
+    <img src="bangladesh-govt-logo.jpg" alt="">
 </body>
 </html>
